--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.0.7",
     "bootstrap": "^5.2.3",
     "gh-pages": "^4.0.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
